# wf

./: .dockerignore  .gcloudignore  .gitignore  2026-06-03-ts-to-rust-backend.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  PLAN.md  clippy.toml  cloudbuild.yaml  otel-config.yaml  rust-toolchain.toml  service.yaml
crates/api/: Cargo.toml  openapi.json
crates/api/src/: auth.rs  dto.rs  error.rs  main.rs  openapi.rs  state.rs  telemetry.rs
crates/api/src/github/: activity.rs  dashboard.rs  dashboard_cache.rs  mod.rs  pat.rs  routes.rs  summary.rs  token_cache.rs
crates/api/src/jira/: actions.rs  data.rs  mod.rs  pat.rs  routes.rs  summary.rs
crates/api/src/middleware/: mod.rs  request_log.rs  request_tracing.rs
crates/api/src/routes/: health.rs  me.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  config.rs  crypto.rs  lib.rs  problem.rs
crates/db/: Cargo.toml
crates/db/examples/: gh_activity.rs  gh_dashboard.rs  gh_favorites.rs  gh_open_prs.rs  gh_pr_enrich.rs  gh_repo.rs  gh_repo_write.rs  gh_validate.rs  gh_write_probe.rs  jira_row.rs  phase0.rs
crates/db/src/: lib.rs
crates/db/src/entities/: jira_pat_connections.rs  mod.rs
crates/db/src/repositories/: github_pat.rs  jira_pat.rs  mod.rs  users.rs
crates/db/src/tables/: mod.rs
crates/db/src/tables/github_pat_connections/: crud.rs  entity.rs  mod.rs
crates/db/src/tables/jira_pat_connections/: crud.rs  mod.rs
crates/db/src/tables/users/: crud.rs  entity.rs  mod.rs
crates/github/: Cargo.toml
crates/github/src/: client.rs  errors.rs  lib.rs  types.rs  validate.rs
crates/github/src/activity/: branches.rs  branches_graphql.rs  environments.rs  inputs.rs  mod.rs  pulls.rs  types.rs  workflows.rs  write.rs
crates/github/src/dashboard/: enrich.rs  mod.rs  query.rs  types.rs
crates/jira/: Cargo.toml
crates/jira/examples/: jira_smoke.rs  jira_validate.rs
crates/jira/src/: client.rs  errors.rs  lib.rs  site_url.rs  status.rs  types.rs  validate.rs
crates/jira/src/issues/: adf.rs  dashboard.rs  fields.rs  jql.rs  mappers.rs  mod.rs  reads.rs  search.rs  writes.rs
deploy/terraform/: .gitignore  .terraform.lock.hcl  main.tf  monitoring.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/superpowers/specs/: 2026-06-08-events-backbone-and-cross-integration-roadmap-design.md  2026-06-08-sub-project-a1-poll-event-backbone-design.md
scripts/: enable-gcp-services.sh  parity.py
