[workspace]
resolver = "2"
members = ["crates/core", "crates/db", "crates/github", "crates/jira", "crates/api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
# Internal crates
wf-core = { path = "crates/core" }
wf-db = { path = "crates/db" }
wf-github = { path = "crates/github" }
wf-jira = { path = "crates/jira" }

# HTTP server
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"
anyhow = "1"

# ORM / DB
sea-orm = { version = "2.0.0-rc.40", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }

# HTTP client + JWT (auth)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Async combinators (bounded-concurrency enrichment) + URL path encoding
futures = "0.3"
percent-encoding = "2"

# Crypto
aes-gcm = "0.10"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# .env loading (dev/local convenience)
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
