[package]
name = "wf-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wf-api"
path = "src/main.rs"

[dependencies]
wf-core = { workspace = true }

actix-web = { workspace = true }
actix-cors = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

chrono = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
