[package]
name = "wf-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wf-api"
path = "src/main.rs"

[dependencies]
wf-core = { workspace = true }
wf-db = { workspace = true }
wf-github = { workspace = true }
wf-jira = { workspace = true }

actix-web = { workspace = true }
actix-cors = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

chrono = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Auth: JWKS fetch + JWT verification (migration plan §7).
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }

# OpenAPI (Phase 5a)
utoipa = { workspace = true, features = ["actix_extras"] }
